WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249023
[ macOS wk2 ] gamepad/gamepad-polling-access.html : com.apple.WebKit: WebKit::WebGamepadProvider::setInitialGamepads
https://bugs.webkit.org/show_bug.cgi?id=249023
Summary
[ macOS wk2 ] gamepad/gamepad-polling-access.html : com.apple.WebKit: WebKit...
Karl Rackler
Reported
2022-12-09 09:02:06 PST
Created
attachment 463962
[details]
symbolicated-log gamepad/gamepad-polling-access.html is a flaky crash It is a flaky crash on macOS wk2 and ews. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=gamepad%2Fgamepad-polling-access.html
CRASHING TEST: gamepad/gamepad-polling-access.html Thread 0 Crashed: 0 com.apple.JavaScriptCore 0x000000010e9f4b58 WTFCrashWithInfoImpl(int, char const*, char const*, int, unsigned long long) + 8 (Assertions.cpp:728) 1 com.apple.WebKit 0x0000000106113455 WebKit::WebGamepadProvider::setInitialGamepads(WTF::Vector<WebKit::GamepadData, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&) + 485 (WebGamepadProvider.cpp:65) 2 com.apple.WebKit 0x00000001062da3f9 WebKit::WebProcess::didReceiveWebProcessMessage(IPC::Connection&, IPC::Decoder&) + 3563 (WebProcessMessageReceiver.cpp:208) 3 com.apple.WebKit 0x00000001063261e2 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 226 (Connection.cpp:1241) 4 com.apple.WebKit 0x0000000106326373 IPC::Connection::dispatchOneIncomingMessage() + 169 (Connection.cpp:1302) 5 com.apple.JavaScriptCore 0x000000010ea39091 WTF::RunLoop::performWork() + 545 (RunLoop.cpp:147) I was unable to repro from the bots, but able to capture the crash log from the ews bot.
https://ews-build.webkit.org/#/builders/28/builds/23845
https://ews-build.s3-us-west-2.amazonaws.com/Commit-Queue/463940-23845/gamepad/gamepad-polling-access-crash-log.txt
Attachments
symbolicated-log
(92.14 KB, text/plain)
2022-12-09 09:02 PST
,
Karl Rackler
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-12-09 09:02:46 PST
<
rdar://problem/103182584
>
Karl Rackler
Comment 2
2022-12-09 09:20:01 PST
I have marked this test as a flaky crash while this issue is investigated.
Chris Dumez
Comment 3
2022-12-09 09:22:34 PST
Likely a regression from Marcos' recent change.
Chris Dumez
Comment 4
2022-12-09 09:23:33 PST
Looks like we're hitting this assertion: ``` void WebGamepadProvider::setInitialGamepads(const Vector<GamepadData>& gamepadDatas) { WP_MESSAGE_CHECK((m_gamepads.isEmpty()), m_gamepads.size()); ```
EWS
Comment 5
2022-12-09 09:25:14 PST
Test gardening commit
257634@main
(e630e4b76cc8): <
https://commits.webkit.org/257634@main
> Reviewed commits have been landed. Closing PR #7390 and removing active labels.
Chris Dumez
Comment 6
2022-12-09 10:09:43 PST
I am having trouble reproducing.
Chris Dumez
Comment 7
2022-12-09 10:54:08 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7395
EWS
Comment 8
2022-12-09 15:59:22 PST
Committed
257651@main
(e94e205403f5): <
https://commits.webkit.org/257651@main
> Reviewed commits have been landed. Closing PR #7395 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug